--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meine Testseite</title>
+    <title>My Test Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="navigation">
-      <button class="test1">Test1</button>
-      <button class="test2">Test2</button>
-      <button class="test3">Test3</button>
+    <div class="navbar">
+      <button class="btn-primary">Test1</button>
+      <button class="btn-secondary">Test2</button>
+      <button class="btn-accent">Test3</button>
     </div>
-    <div class="container-left">
-      <h1>Container-links</h1>
-      <p>Das ist der linke Container</p>
-      <div class="container-left-image">
-        <img
-          src="img/container-left-img.webp"
-          alt="Minimalistisches Workspace-Setup mit Laptop, Notizbuch, Kaffeetasse und Pflanze auf hellem Schreibtisch"
-        />
+    <div class="container">
+      <div class="box box-left">
+        <h1>Left Container</h1>
+        <p>This is the left container</p>
+        <div class="box-image">
+          <img
+            src="img/container-left-img.webp"
+            alt="Minimalist workspace setup with laptop, notebook, coffee cup, and plant on a bright desk"
+          />
+        </div>
       </div>
-    </div>
-    <div class="container-right">
-      <h1>Container Rechts</h1>
-      <p>Das ist der rechte Container</p>
-      <div class="container-right-image">
-        <img
-          src="img/container-right-img.webp"
-          alt="Ruhige Naturlandschaft mit See, Bergen, grünen Hügeln und Wolken im sanften Tageslicht"
-        />
+      <div class="box box-right">
+        <h1>Right Container</h1>
+        <p>This is the right container</p>
+        <div class="box-image">
+          <img
+            src="img/container-right-img.webp"
+            alt="Calm nature landscape with lake, mountains, green hills, and soft daylight clouds"
+          />
+        </div>
       </div>
     </div>
   </body>
