--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="favicon.ico" />
     <title>My Project</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Hero Section -->
@@ -51,7 +52,7 @@
     <section id="explore" class="content">
       <h2>Discover More</h2>
       <p>
-        This section contains more content to demonstrate the scrolling effect. 
+        This section contains more content to demonstrate the scrolling effect.
         Keep scrolling to experience the parallax effect in action.
       </p>
     </section>
