--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>My Project</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Hero Section -->
     <div class="hero">
       <div class="hero-content">
         <h1>Welcome to My Project</h1>
-        <p>Experience a smooth parallax effect with pure CSS</p>
-        <a href="#explore" class="btn">Explore More</a>
+        <p>Experience a smooth parallax effect with JavaScript scrolling</p>
+        <a href="#explore" class="btn scroll-link">Explore More</a>
       </div>
     </div>
 
@@ -55,5 +56,8 @@
         Keep scrolling to experience the parallax effect in action.
       </p>
     </section>
+
+    <!-- JavaScript File -->
+    <script src="functions.js"></script>
   </body>
 </html>
