--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
     </section>
 
     <!-- JavaScript File -->
-    <script src="functions.js"></script>
+    <script src="scroll-functions.js"></script>
   </body>
 </html>
