--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
       </p>
     </section>
 
+    <!-- Scroll to Top Button -->
+    <button id="scrollToTopBtn" class="scroll-to-top">&#8679;</button>
+
     <!-- JavaScript File -->
     <script src="scroll-functions.js"></script>
   </body>
