--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <!-- Scroll to Top Button -->
-    <button id="scrollToTopBtn" class="scroll-to-top">&#8679;</button>
+    <button id="scroll-to-top-btn" class="scroll-to-top">&#8679;</button>
 
     <!-- JavaScript File -->
     <script src="scroll-functions.js"></script>
