--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
       </p>
     </section>
 
-    <!-- Scroll to Top Button -->
+    <!-- Scroll Buttons -->
     <button id="scroll-to-top-btn" class="scroll-to-top">&#8679;</button>
+    <button id="scroll-to-bottom-btn" class="scroll-to-bottom">&#8681;</button>
 
     <!-- JavaScript File -->
     <script src="scroll-functions.js"></script>
