--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Character encoding set to UTF-8 for proper text rendering -->
     <meta charset="UTF-8" />
+    <!-- Ensures proper scaling and responsiveness on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon for the website -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <!-- Title of the webpage -->
     <title>My Project</title>
+    <!-- Linking the external CSS file for styling -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Hero Section -->
+    <!-- Hero Section: Fullscreen banner with introduction -->
     <div class="hero">
       <div class="hero-content">
         <h1>Welcome to My Project</h1>
         <p>Experience a smooth parallax effect with JavaScript scrolling</p>
+        <!-- Button that smoothly scrolls down to the "Explore" section -->
         <a href="#explore" class="btn scroll-link">Explore More</a>
       </div>
     </div>
 
-    <!-- Navigation -->
+    <!-- Navigation Bar -->
     <div class="navbar">
+      <!-- Sample buttons for navigation or actions -->
       <button class="btn-primary">Test1</button>
       <button class="btn-secondary">Test2</button>
       <button class="btn-accent">Test3</button>
     </div>
 
-    <!-- Main Content -->
+    <!-- Main Content Section -->
     <div class="container">
+      <!-- Left Box: Contains a title, text, and an image -->
       <div class="box box-left">
         <h2>Left Container</h2>
         <p>This is the left container</p>
@@ -36,6 +44,7 @@
           />
         </div>
       </div>
+      <!-- Right Box: Contains a title, text, and an image -->
       <div class="box box-right">
         <h2>Right Container</h2>
         <p>This is the right container</p>
@@ -48,7 +57,7 @@
       </div>
     </div>
 
-    <!-- Explore Section -->
+    <!-- Explore Section: Additional content to demonstrate scrolling effect -->
     <section id="explore" class="content">
       <h2>Discover More</h2>
       <p>
@@ -57,11 +66,45 @@
       </p>
     </section>
 
-    <!-- Scroll Buttons -->
-    <button id="scroll-to-top-btn" class="scroll-to-top">&#8679;</button>
-    <button id="scroll-to-bottom-btn" class="scroll-to-bottom">&#8681;</button>
+    <!-- Scroll-To-Top Button -->
+    <!-- Appears after scrolling and smoothly scrolls back to the top -->
+    <button id="scroll-to-top-btn" class="scroll-to-top">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="100%"
+        height="100%"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="white"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <!-- Upward pointing arrow icon -->
+        <polyline points="18 15 12 9 6 15" />
+      </svg>
+    </button>
 
-    <!-- JavaScript File -->
+    <!-- Scroll-To-Bottom Button -->
+    <!-- Always visible (except at the bottom) and smoothly scrolls down -->
+    <button id="scroll-to-bottom-btn" class="scroll-to-bottom">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="100%"
+        height="100%"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="white"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <!-- Downward pointing arrow icon -->
+        <polyline points="6 9 12 15 18 9" />
+      </svg>
+    </button>
+
+    <!-- Linking external JavaScript file for smooth scrolling functionality -->
     <script src="scroll-functions.js"></script>
   </body>
 </html>
