changed toogle switch

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <!-- Main content of the document -->
     <div class="mode-switcher">
       <!-- Container for the mode switcher -->
-      <input type="checkbox" id="mode-switch" />
+      <input type="checkbox" id="mode-switch" class="mode-switch-checkbox" />
       <!-- Checkbox for toggling modes -->
-      <label for="mode-switch" class="switch">
+      <label for="mode-switch" class="mode-switch-label">
         <!-- Label for the checkbox -->
-        <span class="switch-icon switch-icon-light">🌞</span>
-        <!-- Sun icon for light mode -->
-        <span class="switch-icon switch-icon-dark">🌜</span>
-        <!-- Moon icon for dark mode -->
+        <span class="mode-switch-inner"></span>
+        <!-- Inner element for switch -->
+        <span class="mode-switch-switch"></span>
+        <!-- Switch element -->
       </label>
     </div>
 
