--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
     <!-- Main content of the document -->
     <div class="mode-switcher">
       <!-- Container for the mode switcher -->
-      <input type="checkbox" id="mode-switch" class="mode-switch-checkbox" />
-      <!-- Checkbox for toggling modes -->
-      <label for="mode-switch" class="mode-switch-label">
-        <!-- Label for the checkbox -->
-        <span class="mode-switch-inner"></span>
-        <!-- Inner element for switch -->
-        <span class="mode-switch-switch"></span>
-        <!-- Switch element -->
+      <label class="switch">
+        <!-- Label for the switch -->
+        <input type="checkbox" id="mode-switch" />
+        <!-- Checkbox for toggling modes -->
+        <span class="slider round"></span>
+        <!-- Slider element -->
       </label>
     </div>
 
