--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <!-- Checkbox for toggling modes -->
         <span class="slider round"></span>
         <!-- Slider element -->
+        <span class="mode-icon light-mode-icon">🌞</span>
+        <!-- Sun icon for light mode -->
+        <span class="mode-icon dark-mode-icon">🌜</span>
+        <!-- Moon icon for dark mode -->
       </label>
     </div>
 
