--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+Copyright (c) 2025 DeineStrainReviewsDev (https://deinestrainreviewsdev.github.io/My-First-Project/)
+-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
