--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Copyright (c) 2025 DeineStrainReviewsDev (https://deinestrainreviewsdev.github.io/My-First-Project/)
+Copyright (c) 2025 [DeineStrainReviewsDev](https://github.com/DeineStrainReviewsDev)
 -->
 <html lang="en">
   <head>
