index.html added copyright

--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@ Copyright (c) 2025 [DeineStrainReviewsDev](https://github.com/DeineStrainReviews
       </p>
     </section>
 
+    <footer>
+      <p>
+        &copy; 2025 <a href="https://github.com/DeineStrainReviewsDev" target="_blank" rel="noopener noreferrer">DeineStrainReviewsDev</a>
+      </p>
+    </footer>
+
     <button id="scroll-to-top-btn" class="scroll-to-top">
       <svg
         xmlns="http://www.w3.org/2000/svg"
